adding providers API and service

--- a/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
+++ b/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
@@ -5,15 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="DBContexts\" />
-    <Folder Include="Services\Interfaces\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Cognitive.LUIS" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Cognitive.LUIS" Version="2.0.2">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Twilio" Version="5.6.4" />
