--- a/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
+++ b/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
@@ -15,7 +15,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
-    <PackageReference Include="Twilio" Version="5.6.4" />
+    <PackageReference Include="Neo4jClient" Version="2.0.0.9" />
+    <PackageReference Include="Twilio" Version="5.6.5" />
   </ItemGroup>
 
 </Project>
