agregando multiple funcionalidad

--- a/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
+++ b/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
@@ -9,14 +9,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="2.0.1" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Azure.KeyVault" Version="2.3.2" />
     <PackageReference Include="Microsoft.Cognitive.LUIS" Version="2.0.2">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
-    <PackageReference Include="Neo4jClient" Version="2.0.0.9" />
+    <PackageReference Include="Neo4jClient" Version="2.0.0.10" />
     <PackageReference Include="Twilio" Version="5.7.2" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1Development_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
