--- a/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
+++ b/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Neo4jClient" Version="2.0.0.10" />
     <PackageReference Include="Twilio" Version="5.7.2" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.6.0" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
