--- a/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
+++ b/Backend/FruitAppAPI/FruitAppAPI/FruitAppAPI.csproj
@@ -19,7 +19,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Neo4jClient" Version="2.0.0.10" />
-    <PackageReference Include="Twilio" Version="5.7.2" />
+    <PackageReference Include="Twilio" Version="5.9.0" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="5.8.3" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.6.0" />
   </ItemGroup>
 
